--- a/PaymentAPI/PaymentAPI.csproj
+++ b/PaymentAPI/PaymentAPI.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="System.Text.Encoding.CodePages" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Documents\" />
+  </ItemGroup>
+
 </Project>
